upload Code Interview ii 010

--- a/src/II_008.md
+++ b/src/II_008.md
@@ -18,16 +18,16 @@ public int minSubArrayLen(int target, int[] nums) {
 
 ## Solution 1(sliding window)
 
-题目给了nums和target，要我们找到nums中满足**和>=target**的**连续子数组**，要求返回**最短**的长度。
+题目给了 nums 和 target，要我们找到 nums 中满足**和>=target**的**连续子数组**，要求返回**最短**的长度。
 
-这道是经典的sliding window题目。两个指针i，j初始在同一起点，j先走，直到满足题目的条件，也就是**和>=target**，此时轮到i前进了，开始找最短连续子数组，直到不满足条件。i，j就这样前进，j在前面领路，i在后收尾。（例子如下图）
+这道是经典的 sliding window 题目。两个指针 i，j 初始在同一起点，j 先走，直到满足题目的条件，也就是**和>=target**，此时轮到 i 前进了，开始找最短连续子数组，直到不满足条件。i，j 就这样前进，j 在前面领路，i 在后收尾。（例子如下图）
 
 <img src="../pics/expressions/II_008_sliding_window.jpg" style="zoom:50%;" />
 
 **Code**：
 
 ```java
-public List<List<Integer>> threeSum(int[] nums) {
+public int minSubArrayLen(int target, int[] nums) {
         int n = nums.length - 1;
         int left = 0;
         int right = 0;
@@ -48,9 +48,9 @@ public List<List<Integer>> threeSum(int[] nums) {
 
 **解法分析：**
 
-| 易错点                         |
-| ------------------------------ |
-| 求长度，注意不能减完就完事了； |
+| 易错点 |           |
+| ------ | --------- |
+| 求长度 | r - l + 1 |
 
 time complexity: O(n)；
 
