--- a/src/II_005.md
+++ b/src/II_005.md
@@ -24,7 +24,9 @@ public int maxProduct(String[] words) {
 
 利用单词只能由26个小写英文字母组成，用二维数组（图示）打表记录，每一entry是一个单词，之后读表判断是否有相同字母，并求积。
 
-![](../pics/expressions/II_005_matrix.jpg)
+
+
+<div align="center"> <img src="../pics/expressions/II_005_matrix.jpg" width="80%" height="60%"/> </div>
 
 
 
