--- a/src/II_006.md
+++ b/src/II_006.md
@@ -24,7 +24,7 @@ public int[] twoSum(int[] nums, int target) {
 
 思路是双指针分别从头尾走，利用数组的升序来调整指针位置，直到找到这两个数字。
 
-<img src="../pics/expressions/II_006_2sum.jpg" style="zoom:50%;" />
+<div align="center"> <img src="../pics/expressions/II_006_2sum.jpg" width="60%" height="60%"/> </div>
 
 **Code**：
 
@@ -52,5 +52,4 @@ public int[] twoSum(int[] nums, int target) {
 time complexity: O(n)，遍历一遍 nums；
 
 space complexity: O(1)；
-
 
