--- a/src/II_007.md
+++ b/src/II_007.md
@@ -31,9 +31,12 @@ public List<List<Integer>> threeSum(int[] nums) {
 3.注意去重，可以用和上一个指针的 val 比较，如果一致，就跳过；
 
 * 三个元素中，固定下来的值移动时要去重；
+
 * 在找到一个吻合的之后，指针继续移动时也要去重；
 
-<img src="../pics/expressions/II_006_2sum.jpg" style="zoom:50%;" />
+  
+
+<div align="center"> <img src="../pics/expressions/II_006_2sum.jpg" width="60%" height="60%"/> </div>
 
 **Code**：
 
