--- a/src/II_008.md
+++ b/src/II_008.md
@@ -22,7 +22,9 @@ public int minSubArrayLen(int target, int[] nums) {
 
 这道是经典的 sliding window 题目。两个指针 i，j 初始在同一起点，j 先走，直到满足题目的条件，也就是**和>=target**，此时轮到 i 前进了，开始找最短连续子数组，直到不满足条件。i，j 就这样前进，j 在前面领路，i 在后收尾。（例子如下图）
 
-<img src="../pics/expressions/II_008_sliding_window.jpg" style="zoom:50%;" />
+<div align="center"> <img src="../pics/expressions/II_008_sliding_window.jpg"/> </div>
+
+
 
 **Code**：
 
