--- a/src/II_010.md
+++ b/src/II_010.md
@@ -35,9 +35,9 @@ public int subarraySum(int[] nums, int k) {
 
 3.关于 **sum 的数据类型**，根据题意 nums[i] <= 10^3^，nums.length <= 2 * 10^4^，所以 sum <= 2 * 10^7^ 也必然小于 Integer.MAX_VALUE；
 
-4.之后读 preSum 数组的时候要注意有偏移，上面的 preSum 式子是从 1 开始，也就是 preSum[1] = nums[0]，preSum[len] = nums[0] + ... + nums[len - 1]，向右偏移了1，所以如果要完整的从`i`到`j`，就是`preSum[j] - preSum[i - 1] `，而不是 `preSum[j] - preSum[i] `（图示）；
+4.之后读 preSum 数组的时候要注意有偏移，index 从 1 开始，也就是 preSum[1] = nums[0]，preSum[len] = nums[0] + ... + nums[len - 1]，向右偏移了1，所以如果要完整地从头开始，就是`preSum[j] - preSum[i - 1] `，而不是 `preSum[j] - preSum[i] `（图示）；
 
-<img src="../pics/expressions/II_010_preSum.jpg" style="zoom:50%;" />
+<div align="center"> <img src="../pics/expressions/II_010_preSum.jpg"/> </div>
 
 **Code**：
 
