--- a/src/II_001.md
+++ b/src/II_001.md
@@ -4,28 +4,13 @@
 
 **src**：https://leetcode-cn.com/problems/xoh6Oh/
 
-**题目**：给定两个整数 `a` 和 `b` ，求它们的除法的商 `a/b` ，要求不得使用乘号 `'*'`、除号 `'/'` 以及求余符号 `'%'` 。
+#### description
 
-**注意**：
+<div align="center"> <img src="../pics/labels/CIii_001.png"/> </div>
 
-* 整数除法的结果应当截去（`truncate`）其小数部分，例如：`truncate(8.345) = 8` 以及 `truncate(-2.7335) = -2`；
 
-* 假设我们的环境只能存储 32 位有符号整数，其数值范围是 [−2^31^, 2^31^−1]。本题中，如果除法结果溢出，则返回 2^31^ − 1；
 
-**例子**：
-
-```html
-输入：a = 15, b = 2
-输出：7
-解释：15/2 = truncate(7.5) = 7
-```
-
-**注意 a 与 b 的取值**：
-
-* -2^31^ <= a, b <= 2^31^ - 1；
-* b != 0；
-
-**题头**：
+#### method signature
 
 ```java
 public int divide(int a, int b) {
@@ -33,25 +18,27 @@ public int divide(int a, int b) {
 
 
 
-### Solution 1 (brute force)
+### solutions
 
-不进行模拟，也不进行位运算。直观。
+#### solution 1 (brute force)
 
-题目要求a除以b的商，且截去小数部分，可以理解为 a 等价于 n * b + c（c < b），用减法来实现乘法。
+**题目要求 a 除以 b 的商，且截去小数部分，可以理解为 a 等价于 n * b + c（c 是余数），用减法来实现乘法。**
 
-思想很简单，但是实现的时候要注意：
+> 实现的时候要注意：
+>
+> 1. 是否会越界；
+> 2. a, b 怎样进行减法计算，统一为`+`或`-`，计算结束之后，`returun value` 的符号；
+>
 
-1. 越界问题，int 类型的范围；
-2. 返回结果的正负号，计算的环境（正 or 负）；
+**越界的讨论**，本题是整数除法（c must <= a），所以计算中溢出的情况只有一个，就是 −2^31^ / -1，它的结果 2^31^ 越界了，根据题目，需要特殊处理返回 2^31^ − 1；
 
-**解决与讨论**：
+* 还有一种情况，a=−2^31^，a 在转变成正数的时候，变成 2^31^，溢出了。所以，要么都变负数，要么这种特殊情况拎出来讨论。
 
-1. 越界的讨论，本题是整数除法（c must <= a），所以溢出的情况只有一个，就是 −2^31^ / -1，它的结果 2^31^ 越界了，根据题目，需要特殊处理返回2^31^ − 1；
-   * 还有一种情况，a=−2^31^，a在转变成正数的时候，变成2^31^，溢出了。所以，要么都变负数，要么特殊情况拎出来讨论。
+**`returun value` 的正负号**，可以先记好 a, b 的符号，只有在它俩异号的时候商是负号（一个负数 or 一个正数），用一个变量记下，之后就可以去掉原本的正负号，进行计算；
 
-2. 结果的正负号，可以先记好，只有在它俩异号的时候商是负号，就是它俩一个负数 or 一个正数，用一个变量记下，之后统一环境，进行计算；
 
-**Code**：
+
+*code*：
 
 ```java
 // repalce a with dividend, replace b with divisor, for better understanding.
@@ -62,7 +49,7 @@ public int divide(int dividend, int divisor) {
     int flag = 2;
     int result = 0;
     
-    // swicth dividend, divisor  to negative numbers to avoid situations like cross boundary.
+    // switch dividend, divisor to negative numbers to avoid cross boundary.
     // notes: Math.abs() would return wrong answer if dividend or divisor is Integer.MIN_VALUE.
     if(dividend > 0){
         flag--;
@@ -82,36 +69,55 @@ public int divide(int dividend, int divisor) {
 }
 ```
 
-**解法分析**：
+**Pros and Cons**
 
-time complexity: O( ) 难以具体地给出；space complexity: O(1)；
+| big O            | -                     |
+| ---------------- | --------------------- |
+| time complexity  | O(n)，n = (a - c) / b |
+| space complexity | O(1)                  |
 
-计算量太大，最坏情况如果a是−2^31^，b是1，计算出商，需要算很多次。
+*cons*
 
-**在超时的边缘试探，leetcode 很难跑过。**
+计算量太大，最坏情况如果 a = −2^31^，b = 1，计算 a / b，需要经过很多次减法循环。
 
-特点是思路直观，因为java语言的特点，需要考虑int越界这个因素，在结果输出和计算的时候都要考虑到这一点，是本题的难点。
+* **在 time limit exceeded 的边缘试探，难跑过。**
 
-### Solution 2 (bit wise & simulation)
+*pros*
 
-1. 对于越界问题，和Solution 1差不多的解法，先筛掉特殊情况，之后在计算过程中不用 Math.abs()；
+思路直观。
 
-   * 如果要用Math.abs()，需要把传入的参数 a，b 强制转型为 long，再求绝对值；
 
-2. 正负号问题，巧妙：
 
-   * 铺垫：位运算的`异或`（不同是1）和`与`（同时为1是1），`Integer.MIN_VALUE`是负数，最高位为`1`；
+**conclusion**
 
-     | `Integer.MIN_VALUE` | -2147483648 | 1-0000000000000000000000000000000 |
-     | ------------------- | ----------- | --------------------------------- |
+因为 Java 语言的特点，需要考虑 int 越界的因素，在结果输出和计算的时候都要考虑到这一点，是本题的难点。
 
-   * a ^ b 解释 若a，b同号，0xxxx，若异号，1xxxx，这时和 `Integer.MIN_VALUE` 进行与运算，除了最高位，其它位均清0，得到结果 0（ab同号） or 1（ab异号）；
 
-   * 相比于Solution 1的 flag，这个解法体现了位运算的知识储备。
 
-3. simulation 部分：模拟除法的手写算式（二进制），本质还是减法，但是里面的一层用二进制，这样就可以用移位运算，省到log级别的时间复杂度。
+#### solution 2 (bit wise & simulation)
 
-**Code：**
+**越界问题**，和 Solution 1 差不多的解法，先筛掉特殊情况，之后在计算过程中不用 Math.abs()；
+
+* 如果要用Math.abs()，需要把传入的参数 a，b 强制转型为 long，再求绝对值；
+
+**正负号问题**（bit 视角）：
+
+* 铺垫：位运算的`异或`（不同是1）和`与`（同时为1是1），`Integer.MIN_VALUE`是负数，最高位（符号位）为`1`；
+
+  | `Integer.MIN_VALUE` | -2147483648 | 1-0000000000000000000000000000000 |
+  | ------------------- | ----------- | --------------------------------- |
+
+* a ^ b 解释 若 a，b 同号，0xxxx，若异号，1xxxx，这时和 `Integer.MIN_VALUE` 进行与运算，除了最高位，其它位均清0，得到结果 0（ab同号） or 1（ab异号）；
+
+* 相比于Solution 1的 flag，这个解法能体现位运算的知识储备。
+
+**simulation 的部分**：模拟除法的手写算式（二进制），本质还是减法，但是里面的一层用二进制，这样就可以用移位运算，把时间复杂度省到 log 级别。
+
+<div align="center"> <img src="../pics/expressions/II_001_divide.jpg"/> </div>
+
+
+
+*Code*
 
 ```java
 public int divide(int a, int b) {
@@ -127,13 +133,13 @@ public int divide(int a, int b) {
     y = y < 0 ? -y : y;
     
     while (x >= y) {
-        long cnt = 1, base = y;
-        while (x > (base << 1)) {
+        long cnt = 1, divisor = y;
+        while (x > (divisor << 1)) {
             cnt <<= 1;
-            base <<= 1;
+            divisor <<= 1;
         }
         ans += cnt;
-        x -= base;
+        x -= divisor;
     }
     ans = (((a ^ b) & signBit) == 0) ? ans : -ans;
     return (int)ans;
@@ -141,15 +147,30 @@ public int divide(int a, int b) {
     
 ```
 
-**解法分析**：
+**Pros and Cons**
 
-time complexity: O( logn) 难以具体地给出；space complexity: O(1)；
+| big O            | -                        |
+| ---------------- | ------------------------ |
+| time complexity  | O(logn)，n = (a - c) / b |
+| space complexity | O(1)                     |
 
-针对int越界的问题，用了long，一些情况下可能会限制使用long。
 
-**跑很快。**
+
+*cons*
+
+针对 int 越界的问题，用了 long，但一些情况下可能会限制 long 的使用。
+
+
+
+*pros*
+
+**节约了时间，跑很快。**
+
+
+
+**conclusion**
 
 特点是移位运算，里面的一层循环要理清，算是难点。
 
-亮点是商的正负号判断，花哨起来了，相比于a，b进行大于0小于0判断，但是普通方法来判断也是完全可以的。
+亮点是商的正负号判断，用位运算一行代码就解决了（相比于a，b进行大于0小于0判断），但是普通方法来判断也是完全可以的。
 
