modify 030, and upload Code Interview ii 031-033

--- a/src/II_030.md
+++ b/src/II_030.md
@@ -29,9 +29,9 @@ class RandomizedSet {
 
 > **boolean insert(val)** 
 >
-> val 已存在，返回 false；
+> `val` 已存在，返回 `false`；
 >
-> val 不存在，insert val，返回 true；
+> `val` 不存在，`insert val`，返回 `true`；
 >
 > *hashtable map 的 key, value 分别对应 val, index，用来快速定位 val 在 ArrayList arr 中的位置；*
 
@@ -46,11 +46,11 @@ insert(val):
 
 > **boolean remove(val)** 
 >
-> val 不存在，无法删除没有的元素，返回 false；
+> `val` 不存在，无法删除没有的元素，返回 `false`；
 >
-> val 存在，借助 map，得到它对应的 index，delete val，返回 true。
+> `val` 存在，借助 `map`，得到它对应的 `index`，`delete val`，返回 `true`。
 >
-> * 这样 arr 会有空位置，之后 getRandom() 时，概率会不均，所以，我们通过**覆盖法**来删，把原本在 arr 末尾的元素放到 val 的位置，并在 map 中更新它，之后便可以删掉 arr 的最后一个元素， 这时已经 “删掉” 了 val，所以 map 也需要更新，即删掉 val 的相关映射。
+> * 这样 `arr` 会有空位置，之后 `getRandom()` 时，概率会不均，所以，我们通过**覆盖法**来删，把原本在 `arr` 末尾的元素放到 `val` 的位置，并在 `map` 中更新它，之后便可以删掉 `arr` 的最后一个元素， 这时已经 “删掉” 了 `val`，所以 `map` 也需要更新，即删掉 `val` 的相关映射。
 
 ```txt
 remove(val):
@@ -132,5 +132,4 @@ class RandomizedSet {
 | ---------------- | ---- |
 | time complexity  | O(1) |
 | space complexity | O(1) |
-
 
